Dockerfile for spring app and db

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -7,6 +7,10 @@ http {
     listen 80;
     default_type application/octet-stream;
 
+    location ~^/api {
+      proxy_pass http://spring:8080;
+    }
+
     location / {
       gzip on;
       gzip_proxied any;
