--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/families?useSSL=false
+spring.datasource.url=jdbc:mysql://db/families?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=springuser
-spring.datasource.password=jw170464
+spring.datasource.password=springpassword
