--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -21,6 +21,8 @@ http {
       root   /usr/share/nginx/html;
       index  index.html index.htm;
       include /etc/nginx/mime.types;
+      
+      try_files $uri /index.html;
     }
 
   }
